--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.0.4",
+    "next-video": "^2.5.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
